# ranki

./: .gitignore  Cargo.toml  LICENSE  README.md  anki.conf
src/: collection.rs  gui.rs  main.rs  ui.rs
src/collection/: data.rs  mod.rs  schedule.rs  store.rs
src/gui/: card_operations.rs  card_view.rs  deck_operations.rs  deck_view.rs  mod.rs  old-window.rs  operations_grid.rs  quiz.rs  window.rs
