[package]
name = "anki-rs"
version = "0.1.0"
authors = ["Everett Wilson <everettwilson@pop-os.localdomain>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
clap = { version = "2.33" }
gtk = { version = "0.7", features = ["v3_16"] }
gio = { version = "0.7", features = ["v2_44"] }
